set characters to vuejs

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name=”description” content="Página para fãs do seriado do Disney Plus O Mandaloriano">
-    <title>Welcome to The Mandalorian Web Page</title>
+    <title>Bem Vindo(a) à página de O Mandaloriano</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="shortcut icon" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/favicon/favicon.ico"
         type="image/x-icon">
@@ -30,83 +30,6 @@
 
 <body>
     <div id="app"></div>
-    <section class="characters">
-        <h2 id="title-characters" class="md-font all-title">CHARACTERS</h2>
-        <ul id="characters">
-            <li class="character-item">
-                <figure>
-                    <a class="character-image"
-                        href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/the-din-djarin.jpg"><img
-                            src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/the-din-djarin.jpg"></a>
-                    <figcaption class="md-font">Din Djarin</figcaption>
-                </figure>
-            </li>
-            <li class="character-item">
-                <figure>
-                    <a class="character-image"
-                        href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/grogu.png"><img
-                            src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/grogu.png"></a>
-                    <figcaption class="md-font">Grogu</figcaption>
-                </figure>
-            </li>
-            <li class="character-item">
-                <figure>
-                    <a class="character-image"
-                        href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/cara-dune.jpg"><img
-                            src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/cara-dune.jpg"></a>
-                    <figcaption class="md-font">Cara Dune</figcaption>
-                </figure>
-            </li>
-            <li class="character-item">
-                <figure>
-                    <a class="character-image"
-                        href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/greef-karga-.jpeg"><img
-                            src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/greef-karga-.jpeg"></a>
-                    <figcaption class="md-font">Greef Karga</figcaption>
-                </figure>
-            </li>
-            <li class="character-item">
-                <figure>
-                    <a class="character-image"
-                        href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/boba-fett.jpg"><img
-                            src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/boba-fett.jpg"></a>
-                    <figcaption class="md-font">Boba Fett</figcaption>
-                </figure>
-            </li>
-            <li class="character-item">
-                <figure>
-                    <a class="character-image"
-                        href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/bo-katan.jpeg"><img
-                            src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/bo-katan.jpeg"></a>
-                    <figcaption class="md-font">Bo-Katan</figcaption>
-                </figure>
-            </li>
-            <li class="character-item">
-                <figure>
-                    <a class="character-image"
-                        href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/ahsoka-tano.jpeg"><img
-                            src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/ahsoka-tano.jpeg"></a>
-                    <figcaption class="md-font">Ahsoka Tano</figcaption>
-                </figure>
-            </li>
-            <li class="character-item">
-                <figure>
-                    <a class="character-image"
-                        href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/fennec-shand.jpeg"><img
-                            src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/fennec-shand.jpeg"></a>
-                    <figcaption class="md-font">Fennec Shand</figcaption>
-                </figure>
-            </li>
-            <li class="character-item">
-                <figure>
-                    <a class="character-image"
-                        href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/moff-gideon.jpeg"><img
-                            src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/moff-gideon.jpeg"></a>
-                    <figcaption class="md-font">Moff Gideon</figcaption>
-                </figure>
-            </li>
-        </ul>
-    </section>
     <section class="fb-plugin">
         <div class="fb-page" data-href="https://www.facebook.com/the.mandalorian.page/" data-tabs="timeline"
             data-width="200" data-height="100" data-small-header="false" data-adapt-container-width="true"
