set footer to vuejs

--- a/public/index.html
+++ b/public/index.html
@@ -12,16 +12,11 @@
     </script>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <meta name=”description” content="Página para fãs do seriado do Disney Plus O Mandaloriano">
+    <meta name=”description” content="Página para fãs do seriado do Disney Plus: O Mandaloriano">
     <title>Bem Vindo(a) à página de O Mandaloriano</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="shortcut icon" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/favicon/favicon.ico"
         type="image/x-icon">
-    <link rel='stylesheet' type='text/css' media='screen' href='css/character.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/facebookPlugin.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/footer.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/socialLinks.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/responsive.css'>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
@@ -30,25 +25,6 @@
 
 <body>
     <div id="app"></div>
-    <footer class="footer">
-        <h3 class="md-font">DEVELOPED BY CRISTIAN PENTEADO - 2021</h3>
-        <ul class="social-media-list">
-            <li class="social-media-item"><a href="https://github.com/cristianpdev" target="_blank"><img
-                        class="social-media-image"
-                        src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/social-medias/github.svg"
-                        alt="Github"></a></li>
-            <li class="social-media-item"><a href="https://twitter.com/cristianpdev" target="_blank"><img
-                        class="social-media-image"
-                        src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/social-medias/twitter.svg"
-                        alt="Twitter"></a></li>
-            <li class="social-media-item"><a href="https://linkedin.com/in/cristian-penteado-6ab241177/"
-                    target="_blank"><img class="social-media-image"
-                        src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/social-medias/linkedin.svg"
-                        alt="Linkedin"></a></li>
-        </ul>
-
-    </footer>
-    </div>
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous"
         src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v10.0&appId=845482559160084&autoLogAppEvents=1"
