--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta name=”description” content="Página para fãs do seriado do Disney Plus: O Mandaloriano">
     <title>Bem Vindo(a) à página de O Mandaloriano</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="shortcut icon" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/favicon/favicon.ico"
+    <link rel="shortcut icon" href="https://mandalor.s3-sa-east-1.amazonaws.com/favicon/favicon.ico"
         type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200&display=swap" rel="stylesheet">
